install mongo and fix create user method
