# backend/user/router.js
@@ -1,0 +1,8 @@
+import expess from 'express';
+import userController from './controller.js';
+
+const router = expess.Router();
+
+router.post('/', userController.createUserController);
+
+export default router;
